--- a/app/src/main/res/layout/item_container_slider_image.xml
+++ b/app/src/main/res/layout/item_container_slider_image.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        
+
         <variable
             name="imageURL"
             type="String" />
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop"
-        android:imageURL="@{imageURL}">
-
+        android:imageURL="@{imageURL}"
+        android:scaleType="centerCrop">
     </ImageView>
+
 </layout>
