--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,7 +9,12 @@
             name="isLoading"
             type="Boolean" />
 
+        <variable
+            name="isLoadingMore"
+            type="Boolean" />
+
         <import type="android.view.View" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +22,7 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:background="@color/tim"
-        tools:context=".activities.WatchlistActivity">
+        tools:context=".activities.SearchActivity">
 
         <LinearLayout
             android:id="@+id/linear_header"
@@ -31,44 +36,70 @@
 
             <ImageButton
                 android:id="@+id/image_back"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_24sdp"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:background="@null"
-                android:contentDescription="@string/app_name"
+                android:padding="@dimen/_3sdp"
                 android:src="@drawable/ic_back"
                 app:tint="@color/white" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <EditText
+                android:id="@+id/input_search"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginHorizontal="@dimen/_8sdp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@string/watch_list"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="@string/search_tvshow"
+                android:imeOptions="actionDone"
+                android:importantForAutofill="no"
+                android:inputType="text"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_14ssp" />
+                android:textColorHint="@color/xam"
+                android:textSize="@dimen/_13ssp" />
+
+            <ImageButton
+                android:id="@+id/image_search"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginEnd="@dimen/_8sdp"
+                android:background="?android:selectableItemBackground"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_search"
+                app:tint="@color/white" />
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_watchlist"
+            android:id="@+id/rcv_search_tvShow"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
-            android:padding="@dimen/_4sdp"
-            android:visibility="gone"
+            android:paddingHorizontal="@dimen/_4sdp"
+            android:paddingTop="@dimen/_4sdp"
+            android:paddingBottom="@dimen/_45sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear_header" />
 
         <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default = gone}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear_header" />
 
+        <ProgressBar
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginBottom="@dimen/_12sdp"
+            android:visibility="@{isLoadingMore ? View.VISIBLE : View.GONE, default = gone}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
