--- a/app/src/main/res/layout/activity_watchlist.xml
+++ b/app/src/main/res/layout/activity_watchlist.xml
@@ -23,7 +23,7 @@
             android:id="@+id/linear_header"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@color/toolbar"
+            android:background="@color/tim"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="@dimen/_8sdp"
