Update gradle 8.1.1 and move library picasso to glide

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:background="@color/tim"
-        tools:context=".activities.MainActivity">
+        tools:context=".presentation.activities.MainActivity">
 
         <LinearLayout
             android:id="@+id/linear_header"
