--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:background="@color/tim"
-        tools:context=".activities.SearchActivity">
+        tools:context=".presentation.activities.SearchActivity">
 
         <LinearLayout
             android:id="@+id/linear_header"
