--- a/app/src/main/res/layout/activity_tvshow_details.xml
+++ b/app/src/main/res/layout/activity_tvshow_details.xml
@@ -53,7 +53,7 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:background="@color/tim"
-        tools:context=".activities.TVShowDetailsActivity">
+        tools:context=".presentation.activities.TVShowDetailsActivity">
 
         <ScrollView
             android:id="@+id/scrollView2"
